# shm_stack_machine

./: .gitmodules  CMakeLists.txt  README.md  instrucitons.md  network.koesling.shm-stack-machine.yml  special_vars.md  warnings.cmake
.github/workflows/: cmake_dbg.yml  flatpak.yml
examples/: systime_sin.stackm  systime_sin.statem  toggle_ff.stackm  toggle_ff.statem
libs/: CMakeLists.txt
src/: CMakeLists.txt  Machine.cpp  Machine.hpp  Memory.cpp  Memory.hpp  StackMachine.cpp  StackMachine.hpp  instruction.cpp  instruction.hpp  license.cpp  main.cpp  special_instructions.cpp  special_instructions.hpp  time_str.cpp  time_str.hpp
test/: CMakeLists.txt  test.cpp  test_stack_machine.cpp
test/programs/: 1.stackm  2.stackm  3.stackm  4.stackm  5.stackm  6.stackm  7.stackm
